# cauchy-simulations-2025-03

./: README.md  ape-config.yaml  main.py  pyproject.toml
notebook/: actual.ipynb  analysis.ipynb  base.ipynb  curve.ipynb  model.ipynb  modified.ipynb  normal.ipynb  variable.ipynb
src/cauchy_simulations/: __init__.py  utils.py
src/cauchy_simulations/models/: base.py  symmetric.py
src/cauchy_simulations/profiles/: base.py  cauchy.py  curve.py  normal.py  uniswap.py
