[project]
name = "cauchy-simulations"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "eth-ape==0.7.23",
    "matplotlib>=3.10.1",
    "notebook>=7.3.3",
    "numpy==1.26.4",
    "pandas>=1.5.3",
    "scipy>=1.15.2",
]
